# todopro

./: .gitignore  CMakeLists.txt  wymagania.txt
src/: CMakeLists.txt  TODO  datastore.h  poparser.cc  poparser.h  serializer.cc  serializer.h  sff.cc  sff.h  style.cc  style.h  task.cc  task.h  tasklist.h  taskmanager.cc  taskmanager.h  taskview.cc  taskview.h  todopro.cc  todopro.h  types.h  userinput.cc  userinput.h
tests/: CMakeLists.txt  CMakeLists.txt.test  datastore.test.cc  main.cc  simplefileformat.test.cc  task.test.cc  taskmanager.test.cc  todopro.test.cc  userinput.test.cc
tests/fixtures/: taskfixture.cc  taskfixture.h
